Fix position of close icon on mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -573,7 +573,7 @@ input[type="email"] {
     width: 100vw;
     height: 100vh;
     background-color: var(--white);
-    padding: 1.25rem 1.890625rem;
+    padding: 1.25rem 3.555%;
     transform: translateX(100%);
     transition: transform 500ms ease-in-out;
     z-index: 10;
